overflow in mobile fixed
the container-fluid__pink or with any color that I have  made was not good becasue it was not taking the properties of the container-flui, now it is with  @extend .container-fluid;

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,7 +36,9 @@ $theme-colors: map-merge($theme-colors, $custom-color);
 @import "./bootstrap/scss/bootstrap";
  
 // Add custom code after this
-
+body {
+    overflow-x: hidden;
+  }
 /***HEADER***/
 .announcement-bar {
     font-size: 0.8rem;
@@ -338,17 +340,22 @@ $theme-colors: map-merge($theme-colors, $custom-color);
 /***SECTION POSTs***/
 .container-fluid{
     &__white{
+        // takes all the settings of the container-fluid
+        @extend .container-fluid;
         background-color: var(--bs-white);
     }
 
     &__pink{
+        @extend .container-fluid;
         background-color: var(--bs-pasol-pink);
     }
 
     &__blue{
+        @extend .container-fluid;
         background-color: var(--bs-pasol-blue);
     }
 }
+
 
 .first-post{
     &__image{
